--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
@@ -5,6 +5,8 @@
 */
 
 / {
+	utags: utags { };
+	hw: hw { };
 	tboard_thermistor4: thermal-ntc4 { };
 	tboard_thermistor5: thermal-ntc5 { };
 	moto_chg_tcmd: moto_chg_tcmd { };
