--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -7,6 +7,11 @@
 			remote-endpoint = <&main_af>;
 		};
 	};
+	port@1 {
+		wide_af_endpoint: endpoint {
+			remote-endpoint = <&wide_af>;
+		};
+	};
 };
 
 &i2c6 {
@@ -40,14 +45,27 @@
 	};
 };
 
-&i2c8 {
+&i2c2 {
 	camera_af_main@18 {
+		compatible = "mediatek,mot_dubai_ak7377a";
+		reg = <0x18>;
+		vin-supply = <&cam_ois_avdd_ldo>;
+		port {
+			main_af: endpoint {
+				remote-endpoint = <&main_af_endpoint>;
+			};
+		};
+	};
+};
+
+&i2c8 {
+	camera_af_wide@18 {
 		compatible = "mediatek,mot_dubai_dw9800v";
 		reg = <0x18>;
 		vin-supply = <&cam_main_uw_afvdd_ldo>;
 		port {
-			main_af: endpoint {
-				remote-endpoint = <&main_af_endpoint>;
+			wide_af: endpoint {
+				remote-endpoint = <&wide_af_endpoint>;
 			};
 		};
 	};
