--- a/drivers/misc/mediatek/lens/vcm/v4l2/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/Makefile
@@ -14,3 +14,4 @@ obj-$(CONFIG_MTK_V4L2_LENS)   += ak7375c/
 obj-$(CONFIG_MTK_V4L2_LENS)   += bu64253gwz/
 obj-$(CONFIG_MTK_V4L2_LENS)   += dw9800v/
 obj-$(CONFIG_MTK_V4L2_LENS)   += mot_dubai_dw9800v/
+obj-$(CONFIG_MTK_V4L2_LENS)   += mot_dubai_ak7377a/
