arm64/dt: Add carrier sales channel ID
Adding initial carrier-channel-ids.dtsi file which is copied
from home/repo/dev/platform/android/alps/kernel-4.14
branch prods-mtk as of date 2021-11-08 14:02:35

ceb91c6a6a8b (CR):Create new SW channel ID (retjio) .

Change-Id: I9a48b92c56300e1a8d2cd5f0e7c7b328300b5492
Reviewed-on: https://gerrit.mot.com/2157102
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-common-overlay.dtsi
@@ -16,6 +16,7 @@
 #include <dt-bindings/pinctrl/mt6879-pinfunc.h>
 #include <dt-bindings/phy/phy.h>
 #include <dt-bindings/iio/mt635x-auxadc.h>
+#include "mediatek/carrier-channel-ids.dtsi"
 
 &utags {
 	compatible = "mmi,utags";
