tesla: ccci: mot product info feature
implement product info feature that transfers \
product name/radioid/hwrev from LK side to modem side.
The solution is provided by ALPS06446359

Change-Id: Ia26bcd059bf78e18f28b39991b76b45836ca48f8
Reviewed-on: https://gerrit.mot.com/2159317
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Yifu Lin <linyf@mt.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
@@ -16,3 +16,6 @@
 
 # Enable fscrypt V2 wrapped key mode.
 CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT=y
+
+# Enable DRDI feature
+CONFIG_MOTO_DRDI_SUPPORT=y
