--- a/drivers/misc/mediatek/Kconfig
+++ b/drivers/misc/mediatek/Kconfig
@@ -177,6 +177,14 @@ config EXT_MODULES
 	  Specify out-of-tree kernel modules to build in order
 	  The value must be kernel module repo list, such as
 	  "vendor/mediatek/kernel_modules/connectivity/common vendor/mediatek/kernel_modules/connectivity/gps"
+
+config MOTO_DRDI_SUPPORT
+	bool "moto drdi support"
+	help
+	  Used to enable moto drdi support,
+	  which transfers product name/radio id etc to modem side.
+	  Say Y here if you are need moto drdi support.
+	  If unsure, say N
 endmenu # Config
 
 menu "Misc configs"
