Enable SVP for widevine L1
Add kernel configs to enable SVP function
To merge DRM temp patch from MTK to test widevine L1 function on MT6879

Change-Id: I67f746cc7b260e54230752e6882134ceee145efc
Signed-off-by: wufu1 <wufu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2161863
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Jiefeng Ou <oujf@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -46,3 +46,10 @@ CONFIG_SND_SMARTPA_AW882XX=y
 CONFIG_SND_I2S1=y
 CONFIG_TYPEC_FSA4480=m
 CONFIG_MOTO_CHG_TCMD_SUPPORT=m
+#add for svp
+CONFIG_TRUSTONIC_TEE_SUPPORT=m
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+CONFIG_MTK_ENABLE_GENIEZONE=m
+CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_TEE_GP_SUPPORT=y
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
