--- a/arch/arm64/configs/ext_config/debug-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/debug-mgk_64_k510-tesla.config
@@ -13,4 +13,10 @@
 # You can check the .config file to verify that your configuration option is
 # being set as expected.
 #
-
+#add for svp
+CONFIG_TRUSTONIC_TEE_SUPPORT=m
+CONFIG_MTK_DRM_KEY_MNG_SUPPORT=y
+CONFIG_MTK_ENABLE_GENIEZONE=m
+CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
+CONFIG_MTK_TEE_GP_SUPPORT=y
+CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
