arm64/dts: tesla: add stylus&folio dts configure
- add stylus dts configure
- add folio dts configure
- add hall eint node
- changes vio28 from 2.8v to 3.3v for prox sensor;

Change-Id: I3ee617e839cd9f65b562b6d2c5d90eaec48adb6f
Signed-off-by: huangjq9 <huangjq9@motorola.com>
Reviewed-on: https://gerrit.mot.com/2164699
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -13,6 +13,7 @@
 #include "mediatek/mt6879-moto-common-overlay.dtsi"
 #include "mediatek/tesla-touch.dtsi"
 #include "mediatek/tesla-display.dtsi"
+#include "mediatek/tesla-sensor.dtsi"
 #include "mediatek/tesla-wl2864c.dtsi"
 #include "mediatek/cust_mt6879_camera_v4l2_tesla.dtsi"
 #include "mediatek/tesla-charger.dtsi"
