--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
@@ -10,4 +10,8 @@
 	tboard_thermistor4: thermal-ntc4 { };
 	tboard_thermistor5: thermal-ntc5 { };
 	moto_chg_tcmd: moto_chg_tcmd { };
+	hall_1: hall_1 { };
+	hall_2: hall_2 { };
+	hall_3: hall_3 { };
+	hall_4: hall_4 { };
 };
