egis fingerprint: config spi1 to tee-only, prevent non-secure world to read and write spi data
Change-Id: Ib35d94ed1a12e5251e7508b8efb684d4e7be6fd9
Signed-off-by: zengzm <zengzm@mt.com>
Reviewed-on: https://gerrit.mot.com/2167122
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Chuanchun Zhu <zhucc2@motorola.com>
Reviewed-by: Jianlin Nie <niejl1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -97,6 +97,7 @@
 /* FINGERPRINT start */
 &spi1 {
 	status = "okay";
+	tee-only;
 	fingerprint@0 {
 		compatible = "mediatek,fingerprint";
 		reg = <0>;
