tesla: bring up Depth camera eeprom
details:
bring up Depth camera eeprom, add Depth eeprom to tesla dtsi.

Change-Id: I01f2ccfce1842ac69b9d4e446cdfc48a70b8758a
Signed-off-by: buyan1 <buyan1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2167160
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <guozy16@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -481,6 +481,12 @@
 	#size-cells = <0>;
 
 	//DEPTH
+	mtk_camera_eeprom2:camera_eeprom2@20 {
+		compatible = "mediatek,camera_eeprom";
+		reg = <0x20>;
+		status = "okay";
+	};
+
 	sensor2: sensor2@6e {
 		compatible = "mediatek,imgsensor";
 		sensor-names = "mot_dubai_gc02m1b_mipi_raw";
