--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -99,13 +99,33 @@
 		/delete-property/gate-ic;
 
 		compatible = "tianma,nt37701,cmd,144hz";
-
+		reg = <0>;
 		pm-enable-gpios = <&pio 103 0>,
                           <&pio 165 0>,
                           <&pio 164 0>,
                           <&pio 166 0>;
 		reset-gpios = <&pio 97 0>;
-
 		pinctrl-names = "default";
+	};
+
+	panel2@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
+		compatible = "tianma,nt37701,cmd,144hz";
+		reg = <1>;
+		pm-enable-gpios = <&pio 103 0>,
+                          <&pio 165 0>,
+                          <&pio 164 0>,
+                          <&pio 166 0>;
+		reset-gpios = <&pio 97 0>;
+		pinctrl-names = "default";
+		port {
+			panel_in2: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
 	};
 };
