PE50: improve thermal limit current speed
mtk default pe50 thermal limit current speed is very slower
improve thermal limit current speed.

Change-Id: I18be24b619ae233e9092c4c16d50606625bc0504
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2169405
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -159,4 +159,7 @@
 		support_ta = "pca_ta_pps", "pd_adapter";
 		allow_not_check_ta_status;
 		vbat_threshold = <4150>;
+		mmi_therm_cur_thres = <500>;
+		mmi_therm_vol_thres = <80>;
+		mmi_therm_step = <3>;
 };
