arm64/dts: independent connsys dts for diff sku
ref to HW design of tesla, split dts config file by radio to
adapt diff sku for wlan module.

Change-Id: I73a95db9ee62f7f1b31ab43db8e592bbb5385032
Reviewed-on: https://gerrit.mot.com/2169415
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Reviewed-by: Xiaojun Ji <jixj@motorola.com>
Tested-by: Jira Key
Reviewed-by: Hujun Liao <liaohj@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-connsys-na.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-connsys-na.dtsi
@@ -19,11 +19,15 @@
 };
 
 /* CONNSYS cable-det GPIO start */
-&consys {
-	wifi_cable_det_support = "true";
-	pinctrl-names = "wifi_cable_pin_default";
-	pinctrl-0 = <&wifi_cable_det_pin_default>;
-	status = "okay";
+&odm {
+    rfmisc: rfmisc@tesla {
+        wifi_cable_det_support = "true";
+        pinctrl-names = "wifi_cable_pin_default";
+        pinctrl-0 = <&wifi_cable_det_pin_default>;
+        det-gpio = <&pio 124 0X2008>;
+        eint-debounce = <256000>;
+        compatible = "moto,rfmisc";
+    };
 };
 
 &pio {
