--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-evt1-vzw-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-evt1-vzw-overlay.dts
@@ -14,6 +14,7 @@
 /plugin/;
 
 #include "mediatek/mt6879-tesla-common-overlay.dtsi"
+#include "mediatek/tesla-connsys-vzw.dtsi"
 
 #define TESLA_RADIO_VZW 2
 
