arm64/dt: tesla: config nfc device node
Tesla use NXP PN557 as newst nfc controller
Add dts device node and config  nfc clk source

Change-Id: Ifad3624d3b8e1448c52a24b60b3d421a4941c1dd
Signed-off-by: wuwl10 <wuwl10@mt.com>
Reviewed-on: https://gerrit.mot.com/2170362
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-common-overlay.dtsi
@@ -93,6 +93,24 @@
 	};
 };
 
+&clock_buffer_ctrl {
+	mediatek,xo-bbck4 = <1>;
+};
+
+&i2c3 {
+	status = "okay";
+	nfc_pn5xx: nfc_pn5xx@28 {
+		compatible = "nxp,pn5xx";
+		reg = <0x28>;
+		interrupt-parent = <&pio>;
+		interrupts = <19 IRQ_TYPE_LEVEL_HIGH>;
+		nxp,pn544-irq = <&pio 19 0>;
+		nxp,pn544-ven = <&pio 13 0>;
+		nxp,pn544-fd = <&pio 18 0>;
+		status = "okay";
+	};
+};
+
 /* FINGERPRINT start */
 &spi1 {
 	status = "okay";
