--- a/arch/arm64/configs/mgk_64_k510_defconfig
+++ b/arch/arm64/configs/mgk_64_k510_defconfig
@@ -1,10 +1,3 @@
-# This file was automatically generated from:
-#	kernel-5.10/arch/arm64/configs/mgk_64_k510_defconfig
-#	kernel-5.10/arch/arm64/configs/ext_config/moto-mgk_64_k510.config
-#	kernel-5.10/arch/arm64/configs/ext_config/debug-mgk_64_k510.config
-#	kernel-5.10/arch/arm64/configs/ext_config/debug-mgk_64_k510-tesla.config
-#	kernel-5.10/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
-
 CONFIG_BUILD_CONFIG_FILE="build.config.mtk.aarch64"
 CONFIG_ABI_MONITOR=y
 CONFIG_ARCH_MEDIATEK=y
@@ -605,102 +598,7 @@ CONFIG_INTERCONNECT_MTK_MMQOS_MT6789=m
 CONFIG_MTK_BUS_PARITY_CHECK=m
 CONFIG_MTK_CACHE_PARITY_CHECK=m
 CONFIG_GAUGE_MT6983_ALPHA_SUPPORT=m
-CONFIG_EXT_MODULES="../vendor/mediatek/kernel_modules/connectivity/common ../vendor/mediatek/kernel_modules/connectivity/conninfra ../vendor/mediatek/kernel_modules/connectivity/connfem ../vendor/mediatek/kernel_modules/connectivity/gps/gps_stp ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v010 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v030 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v050 ../vendor/mediatek/kernel_modules/connectivity/gps/gps_pwr ../vendor/mediatek/kernel_modules/connectivity/gps/gps_scp ../vendor/mediatek/kernel_modules/gpu ../vendor/mediatek/kernel_modules/connectivity/fmradio"
+CONFIG_EXT_MODULES="../vendor/mediatek/kernel_modules/connectivity/common ../vendor/mediatek/kernel_modules/connectivity/conninfra ../vendor/mediatek/kernel_modules/connectivity/connfem ../vendor/mediatek/kernel_modules/connectivity/gps/gps_stp ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v010 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v030 ../vendor/mediatek/kernel_modules/connectivity/gps/data_link/plat/v050 ../vendor/mediatek/kernel_modules/connectivity/gps/gps_pwr ../vendor/mediatek/kernel_modules/connectivity/gps/gps_scp ../vendor/mediatek/kernel_modules/gpu"
 CONFIG_NFC_CHIP_SUPPORT=y
 CONFIG_NFC_ST21NFC=m
 CONFIG_NFC_ST54_SPI=m
-#
-# Please avoid changing the MTK defconfig files and use this file to
-# add any Motorola-specific configuration changes that are applicable to
-# userdebug, eng, and user builds.
-#
-# After building, a list of all of the config files that are used can be found
-# at the top of:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
-#
-# The actual output of the kernel configuration system can be found at:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
-#
-# You can check the .config file to verify that your configuration option is
-# being set as expected.
-#
-
-# Enable fscrypt V2 wrapped key mode.
-CONFIG_FSCRYPT_WRAPED_KEY_MODE_SUPPORT=y
-#
-# Please avoid changing the MTK defconfig files and use this file to
-# add any Motorola-specific configuration changes that are applicable to
-# userdebug, eng, and user builds.
-#
-# After building, a list of all of the config files that are used can be found
-# at the top of:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
-#
-# The actual output of the kernel configuration system can be found at:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
-#
-# You can check the .config file to verify that your configuration option is
-# being set as expected.
-#
-
-#
-# Please avoid changing the MTK defconfig files and use this file to
-# add any Motorola-specific configuration changes that are applicable to
-# userdebug, eng, and user builds.
-#
-# After building, a list of all of the config files that are used can be found
-# at the top of:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
-#
-# The actual output of the kernel configuration system can be found at:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
-#
-# You can check the .config file to verify that your configuration option is
-# being set as expected.
-#
-
-#
-# Please avoid changing the MTK defconfig files and use this file to
-# add any Motorola-specific configuration changes that are applicable to
-# userdebug, eng, and user builds.
-#
-# After building, a list of all of the config files that are used can be found
-# at the top of:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/mapphone_defconfig
-#
-# The actual output of the kernel configuration system can be found at:
-# out/target/product/$(PRODUCT)/obj/KERNEL_OBJ/.config
-#
-# You can check the .config file to verify that your configuration option is
-# being set as expected.
-#
-
-# CONFIG_DRM_PANEL_TRULY_TD4330_VDO is not set
-# CONFIG_DRM_PANEL_TRULY_TD4330_CMD is not set
-# CONFIG_DRM_PANEL_TRULY_FT8756_VDO is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672C_CPHY_VDO is not set
-# CONFIG_DRM_PANEL_SC_NT36672C_VDO_120HZ is not set
-# CONFIG_DRM_PANEL_TIANMA_R66451_CMD_120HZ is not set
-# CONFIG_DRM_PANEL_TIANMA_NT36672E_VDO_120HZ_HFP is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_CPHY_VDO is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_60HZ is not set
-# CONFIG_DRM_PANEL_SAMSUNG_S68FC01_VDO_AOD is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_120HZ_HFP is not set
-# CONFIG_DRM_PANEL_ALPHA_JDI_NT36672E_VDO_144HZ_HFP is not set
-# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD is not set
-# CONFIG_DRM_PANEL_HX_NT37701_DPHY_CMD_120HZ is not set
-# CONFIG_DRM_PANEL_TRULY_NT35595_CMD is not set
-# CONFIG_DRM_PANEL_SAMSUNG_ANA6705_CMD is not set
-# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
-# CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
-CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
-CONFIG_OF_GPIO=y
-#add for i2c tool
-CONFIG_I2C_CHARDEV=y
-CONFIG_MOTO_WL2864C=m
-CONFIG_CUSTOM_KERNEL_IMGSENSOR="mot_dubai_hi1336_mipi_raw mot_dubai_gc02m1b_mipi_raw"
-# CONFIG_RT4831A_I2C is not set
-CONFIG_SND_SMARTPA_AW882XX=y
-CONFIG_SND_I2S1=y
