arm/dts: Config FG for dubai+ NA
arm/dts
dubai+ NA R sens is 5 mohm, config FG by R sens

Change-Id: Ife76e2c1f025578cd66c14d7a616a97197242936
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2174383
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -26,6 +26,8 @@
 &mtk_gauge {
 	DIFFERENCE_FULLOCV_ITH = <(1100)>;
 	R_FG_VALUE = <(5)>;
+	CURR_MEASURE_20A = <(0)>;
+	UNIT_MULTIPLE = <(1)>;
 };
 
 &pdc {
