Tesla: arm64/dts: Add support for active pen
- Add support for active pen for tesla, and this allow touch report
pen event, firmware support is still required to properly use this feature.

Change-Id: Iab286499714f7e54cd7cff592fa15a91cad36638
Signed-off-by: wengjun1 <wengjun1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2178329
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-touch.dtsi
@@ -52,6 +52,7 @@
 		goodix,input-max-y = <2400>;
 		goodix,stylus_mode-ctrl;
 		goodix,stylus-clk-source = "stylus_clk_gpio"; /* use gpio59 as stylus clk*/
+		goodix,pen-enable;
 		mmi,enable-gestures;
 	};
 };
