arm/dts: bring up ois dw9871
camera:
add ois dw9871 vdd power.

Change-Id: Ife18f3d5d549eebb9edee2d7acd5978ad38ca7f0
Signed-off-by: huangsh4 <huangsh4@mt.com>
Reviewed-on: https://gerrit.mot.com/2181118
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla.dtsi
@@ -50,6 +50,7 @@
 		compatible = "mediatek,mot_dubai_ak7377a";
 		reg = <0x18>;
 		vin-supply = <&cam_ois_avdd_ldo>;
+		vdd-supply = <&cam_main_uw_afvdd_ldo>;
 		port {
 			main_af: endpoint {
 				remote-endpoint = <&main_af_endpoint>;
