arm/dts: config batt para for tesla
battery
config battery para for tesla product

Change-Id: I417ff88158ab922de9f697a8c4e5a8ed0ef6741e
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2181298
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/bat_setting/mt6879_battery_prop.dtsi
+++ b/arch/arm64/boot/dts/mediatek/bat_setting/mt6879_battery_prop.dtsi
@@ -70,6 +70,6 @@
 	MULTI_TEMP_GAUGE0 = <(1)>;
 	/* Multi gauge0 enable */
 	RBAT_PULL_UP_VOLT = <(1840)>;
-#include "mt6879_battery_table.dtsi"
+//#include "mt6879_battery_table.dtsi"
 #include "mt6879_battery_prop_dim2_ext.dtsi"
 };
