--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -28,6 +28,49 @@
 	R_FG_VALUE = <(5)>;
 	CURR_MEASURE_20A = <(0)>;
 	UNIT_MULTIPLE = <(1)>;
+	EMBEDDED_SEL = <(1)>;   /* embedded battery*/
+
+	g_Q_MAX = <
+		/*bat1,   bat2,   bat3,    bat4*/
+		4931 4890 4931 4931/*T0*/
+		4982 4933 4982 4982/*T1*/
+		4969 4924 4897 4897/*T2*/
+		4975 4859 4308 4308/*T3*/
+		4905 4783 3488 3488/*T4*/
+		3488 3488 3488 3488/*T5*/
+		3488 3488 3488 3488/*T6*/
+		3488 3488 3488 3488/*T7*/
+		3488 3488 3488 3488/*T8*/
+		3488 3488 3488 3488/*T9*/
+	>;
+	g_Q_MAX_H_CURRENT = <
+		/*bat1,   bat2,   bat3,    bat4*/
+		4931 4890 4931 4931/*T0*/
+		4982 4933 4982 4982/*T1*/
+		4969 4924 4897 4897/*T2*/
+		4975 4859 4308 4308/*T3*/
+		4905 4783 3488 3488/*T4*/
+		3488 3488 3488 3488/*T5*/
+		3488 3488 3488 3488/*T6*/
+		3488 3488 3488 3488/*T7*/
+		3488 3488 3488 3488/*T8*/
+		3488 3488 3488 3488/*T9*/
+	>;
+	g_FG_PSEUDO100 = <
+		/*bat1,   bat2,   bat3,    bat4*/
+		100 100 100 100/*T0*/
+		100 100 100 100/*T1*/
+		100 100 100 100/*T2*/
+		100 100 100 100/*T3*/
+		100 100 100 100/*T4*/
+		100 100 100 100/*T5*/
+		100 100 100 100/*T6*/
+		100 100 100 100/*T7*/
+		100 100 100 100/*T8*/
+		100 100 100 100/*T9*/
+	>;
+	df-serialnum = "SB18D39674";
+	#include "bat_setting/mt6879_battery_nf50_atl_5000mah.dtsi"
 };
 
 &pdc {
