arm/dts: modify default sink PDO to 5v/3a
Modify default sink PDO to 5V/3A mode by PD spec.
otherwise will cause some source vbus drop and could
not charge to phone

Change-Id: I9ea4c743a5380d687550342f343e422472e9670d
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2181913
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -258,3 +258,11 @@
         status = "okay";
     };
 };
+
+&mt6375_typec {
+	pd-data {
+		/* 5V, 3A */
+		pd,sink-pdo-size = <2>;
+		pd,sink-pdo-data = <0x0001912c 0x0001912c> ;
+	};
+};
