arm/dts: config dcp/sdp/cdp icl for tesla
arm/dts
dcp:1.5a
cdp:1.5a
sdb:0.5a

Change-Id: I7f04e67fda4ea39d9e3c6077e91fc9cc536cc8a1
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2182074
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Hongshu Lou <louhs1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -81,6 +81,9 @@
     battery_cv = <4480000>;
     max_charger_voltage = <14500000>;
     ac_charger_current = <3000000>;
+    usb_charger_current = <500000>;
+    ac_charger_input_current = <1500000>;
+    charging_host_charger_current = <1500000>;
     /*pe5*/
     fast_charging_indicator = <0x10>;
     /*swchg + 1CP*/
