arm/dts: config pe20 for tesla
arm/dts
config pe20 for tesla

Change-Id: If6b67a6015186e747a07664c7d8e6cdd1e902485
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2183544
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Hongshu Lou <louhs1@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -77,6 +77,10 @@
     pd_vbus_upper_bound = <14500000>;
 };
 
+&pe2 {
+	sc_input_current = <3000000>;
+};
+
 &charger {
     battery_cv = <4480000>;
     max_charger_voltage = <14500000>;
@@ -84,8 +88,8 @@
     usb_charger_current = <500000>;
     ac_charger_input_current = <1500000>;
     charging_host_charger_current = <1500000>;
-    /*pe5*/
-    fast_charging_indicator = <0x10>;
+    /*pe5 && pe2*/
+    fast_charging_indicator = <0x12>;
     /*swchg + 1CP*/
     charger_configuration= <3>;
     wireless_charger_max_current = <3000000>;
