wireless_charger:wireless charger dynamic icl
wireless_charger:
-add wireless charger dynamic icl interface
-add pen dts node

Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Change-Id: Idf3a7503ba4b1106d10c6b8c6c0f7c7e658ae967
Reviewed-on: https://gerrit.mot.com/2185529
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Lijun Chen <chenlj2@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6879-moto-base.dtsi
@@ -10,6 +10,7 @@
 	tboard_thermistor4: thermal-ntc4 { };
 	tboard_thermistor5: thermal-ntc5 { };
 	moto_chg_tcmd: moto_chg_tcmd { };
+	smart_pen_charger: mmi,pen-charger { };
 	hall_1: hall_1 { };
 	hall_2: hall_2 { };
 	hall_3: hall_3 { };
