tesla: set to tesla_ois_fw_download
camera:
enable ois dw9871 fw download.

Change-Id: I9012ad9e7a9b188c54047cfe608391072404ec36
Signed-off-by: huangsh4 <huangsh4@mt.com>
Reviewed-on: https://gerrit.mot.com/2168115
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Long Cheng <chengl1@motorola.com>
Reviewed-by: Darong Huang <huangdra@motorola.com>
Reviewed-by: Shenhuai Huang <huangsh4@motorola.com>
Reviewed-by: <wangzl37@motorola.com>
Reviewed-by: Xu Ji <jixu@motorola.com>
Reviewed-by: Jian Zhang <zhangjo@motorola.com>
Reviewed-by: <guozy16@motorola.com>
Reviewed-by: Zhichao Chen <chenzc2@motorola.com>
Submit-Approved: Jira Key

--- a/drivers/misc/mediatek/lens/vcm/v4l2/mot_dubai_ak7377a/Makefile
+++ b/drivers/misc/mediatek/lens/vcm/v4l2/mot_dubai_ak7377a/Makefile
@@ -2,4 +2,22 @@
 # Makefile for misc devices that really don't fit anywhere else.
 #
 
+
+MTK_CUSTOM_PATH  := $(srctree)/drivers/misc/mediatek
+
+
+subdir-ccflags-y += -I$(MTK_CUSTOM_PATH)/lens/vcm/v4l2/mot_dubai_ak7377a/inc
+subdir-ccflags-y += -I$(MTK_CUSTOM_PATH)/lens/vcm/v4l2/mot_dubai_ak7377a/
+
+
+
+
+#obj-$(CONFIG_MTK_V4L2_LENS) += mot_dubai_ak7377a.o
+
 obj-$(CONFIG_MTK_V4L2_LENS) += mot_dubai_ak7377a.o
+mot_dubai_ak7377a-objs += mot_dubai_ak7377.o
+mot_dubai_ak7377a-objs += dw9781_circle_test.o
+mot_dubai_ak7377a-objs += dw9781_i2c.o
+mot_dubai_ak7377a-objs += dw9781.o
+
+$(info mot_dubai_ak7377a-objs : $(mot_dubai_ak7377a-objs))
