--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -29,6 +29,7 @@
 	CURR_MEASURE_20A = <(0)>;
 	UNIT_MULTIPLE = <(1)>;
 	EMBEDDED_SEL = <(1)>;   /* embedded battery*/
+	COM_FG_METER_RESISTANCE = <(0)>;
 
 	g_Q_MAX = <
 		/*bat1,   bat2,   bat3,    bat4*/
