--- a/arch/arm64/boot/dts/mediatek/mt6879-tesla-evt2-na-overlay.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879-tesla-evt2-na-overlay.dts
@@ -30,4 +30,5 @@
 };
 
 #include <tesla_evt2/cust.dtsi>
+#include "mediatek/cust_mt6879_camera_v4l2_tesla_evt.dtsi"
 /*End of this file, DO NOT ADD ANYTHING HERE*/
