--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -36,6 +36,8 @@
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
 CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
 CONFIG_OF_GPIO=y
+#enable zram writeback
+CONFIG_ZRAM_WRITEBACK=y
 #add for i2c tool
 CONFIG_I2C_CHARDEV=y
 CONFIG_MOTO_WL2864C=m
