arm/dts: config charge led gpio for tesla
arm/dts
config gpio charge led for tesla

Change-Id: I986b199f2d342260cb6f8e25e3a0311ee970baed
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2193817
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -280,3 +280,14 @@
 		compatible = "mmi,pen-charger";
 		mmi,pen-psy-name = "wireless";
 };
+
+
+&charge_leds {
+	compatible = "gpio-leds";
+
+	charging {
+		label = "charging";
+		gpios = <&pio 163 0x0>;
+		default-state = "off";
+	};
+};
