arm/dts: config pd source current to 900mA for tesla
arm/dts
config pd source current to 900mA

Change-Id: I3db90c4ce265ee49659180a19350eb313d0e4f6e
Signed-off-by: chailu1 <chailu1@mt.com>
Reviewed-on: https://gerrit.mot.com/2195676
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -270,6 +270,8 @@
 
 &mt6375_typec {
 	pd-data {
+		/* 5V, 900ma */
+		pd,source-pdo-data = <0x0001905a>;
 		/* 5V, 3A */
 		pd,sink-pdo-size = <2>;
 		pd,sink-pdo-data = <0x0001912c 0x0001912c> ;
