--- a/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla_evt.dtsi
+++ b/arch/arm64/boot/dts/mediatek/cust_mt6879_camera_v4l2_tesla_evt.dtsi
@@ -361,7 +361,7 @@
 
 &i2c2 {
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
 	//REAR
@@ -420,7 +420,7 @@
 &i2c4 {
 
 	status = "okay";
-	clock-frequency = <400000>;
+	clock-frequency = <1000000>;
 	#address-cells = <1>;
 	#size-cells = <0>;
 	//FRONT
