telsa: add swtp configuration
Change-Id: I155171bbd2775e0a49909247dc5b3b24a628932b
Signed-off-by: wangsq2 <wangsq2@mt.com>
Reviewed-on: https://gerrit.mot.com/2179219
SLTApproved: Slta Waiver
SME-Granted: SME Approvals Granted
Tested-by: Jira Key
Reviewed-by: Chuanchun Zhu <zhucc2@motorola.com>
Reviewed-by: Yifu Lin <linyf@mt.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/mt6879.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6879.dts
@@ -8001,6 +8001,29 @@
 		status = "disabled";
 	};
 
+	/*Add swtp definition*/
+	swtp: swtp {
+		compatible = "mediatek, swtp-eint";
+	};
+	swtp_1: swtp_1 {
+		compatible = "mediatek, swtp1-eint";
+	};
+	swtp_2: swtp_2 {
+		compatible = "mediatek, swtp2-eint";
+	};
+	swtp_3: swtp_3 {
+		compatible = "mediatek, swtp3-eint";
+	};
+	swtp_4: swtp_4 {
+		compatible = "mediatek, swtp4-eint";
+	};
+	swtp_5: swtp_5 {
+		compatible = "mediatek, swtp5-eint";
+	};
+	swtp_6: swtp_6 {
+		compatible = "mediatek, swtp6-eint";
+	};
+
 	disp_wdma0: disp_wdma0@14018000 {
 		compatible = "mediatek,disp_wdma0",
 					"mediatek,mt6879-disp-wdma";
