--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -55,3 +55,6 @@ CONFIG_MTK_ENABLE_GENIEZONE=m
 CONFIG_MTK_SEC_VIDEO_PATH_SUPPORT=y
 CONFIG_MTK_TEE_GP_SUPPORT=y
 CONFIG_MTK_SVP_ON_MTEE_SUPPORT=y
+
+# Add swtp customization
+CONFIG_MOTO_TESLA_SWTP_CUST=y
