--- a/drivers/misc/mediatek/eccci/Kconfig
+++ b/drivers/misc/mediatek/eccci/Kconfig
@@ -53,3 +53,11 @@ config MTK_SIM_LOCK_POWER_ON_WRITE_PROTECT
 	  it is disabled.
 	  The option default disabled.
 
+config MOTO_TESLA_SWTP_CUST
+	bool "ECCCI tesla swtp customization"
+	depends on MTK_ECCCI_DRIVER
+	help
+	  This option enables tesla swtp customization, if yes,
+	  then it is supported, if no,
+	  it is disabled.
+	  The option default disabled.
