charger:enable pd2
charger:
enable pd2

Change-Id: Iea93952bd43a0bb8f7c1d4aa0cfab8c813186c98
Signed-off-by: Jiacheng Ou <oujc1@motorola.com>
Reviewed-on: https://gerrit.mot.com/2200232
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Lu Chai <chailu1@motorola.com>
Reviewed-by: Huosheng Liao <liaohs@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -75,7 +75,7 @@
 };
 
 &pdc {
-    pd_vbus_upper_bound = <14500000>;
+	sc_input_current = <3000000>;
 };
 
 &pe2 {
@@ -89,8 +89,8 @@
     usb_charger_current = <500000>;
     ac_charger_input_current = <1500000>;
     charging_host_charger_current = <1500000>;
-    /*pe5 && pe2*/
-    fast_charging_indicator = <0x12>;
+    /*pe5 && pdc && pe2*/
+    fast_charging_indicator = <0x16>;
     /*swchg + 1CP*/
     charger_configuration= <3>;
     wireless_charger_max_current = <3000000>;
