--- a/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-charger.dtsi
@@ -293,3 +293,8 @@
 		default-state = "off";
 	};
 };
+
+&charger_cooler {
+	mmi,thermal-mitigation = <(-1) 5000000 4000000 3000000 2500000
+				2000000 1500000 1000000 500000>;
+};
