--- a/drivers/gpu/drm/panel/Kconfig
+++ b/drivers/gpu/drm/panel/Kconfig
@@ -832,6 +832,15 @@ config DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ
 	  resolution and uses 30-bits RGB per pixel. It provides a
 	  MIPI DSI interface to host.
 
+config DRM_PANEL_MOT_DUMMY_VDO_60HZ
+	tristate "DRM_PANEL_MOT_DUMMY_VDO_60HZ"
+	depends on OF
+	depends on DRM_MIPI_DSI
+	depends on BACKLIGHT_CLASS_DEVICE
+	help
+	  Say Y here if you want to enable support for DRM_PANEL_MOT_DUMMY_VDO_60HZ
+	  panel. It provides a MIPI DSI interface to host.
+
 config DRM_MEDIATEK_PANEL
 	tristate "drm panel common driver"
 	depends on OF
