kernel: config/dts: Tesla: enable dummy panel
If lcm is not connected, that code will select the first panel at lcm_driver_list
as the default panel. But if the panel works at the command mode, that commit
will wait for TE signal, that fence will be timeout. So we must select the panel
with video mode.

Change-Id: I3892337d637742522a88d5cb8a65ef1aee4edac2
Signed-off-by: houdz1 <houdz1@mt.com>
Reviewed-on: https://gerrit.mot.com/2205071
SME-Granted: SME Approvals Granted
SLTApproved: Slta Waiver
Tested-by: Jira Key
Reviewed-by: Zhihong Kang <kangzh@motorola.com>
Submit-Approved: Jira Key

--- a/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
+++ b/arch/arm64/boot/dts/mediatek/tesla-display.dtsi
@@ -92,8 +92,18 @@
 &dsi0 {
 	status = "okay";
 
-
 	panel1@0 {
+		/delete-property/ compatible;
+		/delete-property/ pm-enable-gpios;
+		/delete-property/ reset-gpios;
+		/delete-property/gate-ic;
+
+		compatible = "mot,dummy,vdo,60hz";
+		pinctrl-names = "default";
+	};
+
+
+	panel2@0 {
 		/delete-property/ compatible;
 		/delete-property/ pm-enable-gpios;
 		/delete-property/ reset-gpios;
@@ -107,9 +117,14 @@
                           <&pio 166 0>;
 		reset-gpios = <&pio 97 0>;
 		pinctrl-names = "default";
+		port {
+			panel_in2: endpoint {
+				remote-endpoint = <&dsi_out>;
+			};
+		};
 	};
 
-	panel2@0 {
+	panel3@0 {
 		/delete-property/ compatible;
 		/delete-property/ pm-enable-gpios;
 		/delete-property/ reset-gpios;
@@ -124,7 +139,7 @@
 		reset-gpios = <&pio 97 0>;
 		pinctrl-names = "default";
 		port {
-			panel_in2: endpoint {
+			panel_in3: endpoint {
 				remote-endpoint = <&dsi_out>;
 			};
 		};
