--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -35,6 +35,7 @@
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD is not set
 # CONFIG_DRM_PANEL_SAMSUNG_OP_CMD_MSYNC2 is not set
 CONFIG_DRM_PANEL_TIANMA_NT37701A_655_FHDP_DPHY_CMD_144HZ=m
+CONFIG_DRM_PANEL_MOT_DUMMY_VDO_60HZ=m
 CONFIG_OF_GPIO=y
 #enable zram writeback
 CONFIG_ZRAM_WRITEBACK=y
