--- a/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
+++ b/arch/arm64/configs/ext_config/moto-mgk_64_k510-tesla.config
@@ -62,3 +62,5 @@ CONFIG_MOTO_TESLA_SWTP_CUST=y
 
 CONFIG_MICRON_UFSHID=y
 # CONFIG_UFSTW is not set
+
+CONFIG_EXT_MODULES="../vendor/mediatek/kernel_modules/connectivity/common ../vendor/mediatek/kernel_modules/connectivity/conninfra ../vendor/mediatek/kernel_modules/connectivity/connfem ../vendor/mediatek/kernel_modules/gpu ../vendor/mediatek/kernel_modules/connectivity/fmradio ../motorola/kernel/modules/drivers/power/bq25980_mmi"
